First working MVP

--- a/SmartDigitalCanteen_MVP/backend/.env
+++ b/SmartDigitalCanteen_MVP/backend/.env
@@ -1,5 +1,8 @@
+# backend/.env (ADD new variables)
 PORT=5000
 MONGO_URI=mongodb+srv://canteen_user:12345@cluster0.canh7vj.mongodb.net/canteen_db?retryWrites=true&w=majority
 ADMIN_PASSWORD=demo_password
-JWT_SECRET=your_jwt_secret
-
+JWT_SECRET=your-super-secure-jwt-secret-key-here-32chars+
+JWT_EXPIRES_IN=7d
+SUPER_ADMIN_EMAIL=admin@yourcanteen.com
+SUPER_ADMIN_PASSWORD=YourSuperSecurePassword123!
