--- a/SmartDigitalCanteen_MVP/backend/package.json
+++ b/SmartDigitalCanteen_MVP/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node server.js",
-    "seed": "node seed/seed.js"
+    "seed": "node seed/seed.js",
+    "create-super-admin": "node scripts/createSuperAdmin.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
